--- a/part2/countries/.gitignore
+++ b/part2/countries/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#classified
+startapp.bat
+
 # dependencies
 /node_modules
 /.pnp
